# microscope

./: .gitignore  CMakeLists.txt  README.md  microscope-qmake.pro  microscope.pro
arduino/: microscope.ino
rsrc/: mainresources.qrc
src/: CMakeLists.txt  autostitchingstatus.cpp  autostitchingstatus.hpp  controller.cpp  controller.hpp  imagecalibration.cpp  imagecalibration.hpp  imagepreview.cpp  imagepreview.hpp  livecamera.cpp  livecamera.hpp  main.cpp  mainwin.cpp  mainwin.hpp  stitchingwidget.cpp  stitchingwidget.hpp
ui/: about.ui  mainwin.ui  status.ui  stitchingwidget.ui
